# TheBigBangTheoryGame

./: CMakeLists.txt  MessageTypes.h  main.cpp
Client/Udp/: UdpClient.cpp  UdpClient.h
GameParameters/: GameParameters.h
GameSession/: GameSession.cpp  GameSession.h
Server/Udp/: UdpServer.cpp  UdpServer.h
